--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>POM-MAVEN_GIT_Jenkins_Project</name>
+	<name>Cucumber-Maven-TestNg</name>
 	<comment></comment>
 	<projects>
 	</projects>
